[gd_scene load_steps=11 format=3 uid="uid://bd377sxk4fxdy"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_onpsp"]
[ext_resource type="PackedScene" uid="uid://q1boos0cq5c3" path="res://card.tscn" id="2_pgcg1"]
[ext_resource type="Texture2D" uid="uid://wbp82ufiload" path="res://resources/orange_triangle.png" id="6_2fb2j"]
[ext_resource type="Script" path="res://scripts/selection_zone.gd" id="6_bi0n1"]
[ext_resource type="PackedScene" uid="uid://cjqvqwm2xpq4t" path="res://card_field.tscn" id="6_flpfl"]
[ext_resource type="Script" path="res://scripts/hp_bar.gd" id="6_lx0n0"]
[ext_resource type="Script" path="res://scripts/attack_points.gd" id="7_ksjyq"]
[ext_resource type="PackedScene" uid="uid://cobeil5r75r7b" path="res://card_info_container.tscn" id="7_mfhxv"]
[ext_resource type="Texture2D" uid="uid://cc57ub34dl8hl" path="res://resources/card_shadow.png" id="7_p4beu"]

[sub_resource type="Curve2D" id="Curve2D_0n4v4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 295, 0, 0, 0, 0, 0, 0)
}
point_count = 2

[node name="Player" type="Node2D"]
position = Vector2(262, -8)
script = ExtResource("1_onpsp")
card_scene = ExtResource("2_pgcg1")

[node name="BattleField" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(317, 397)

[node name="SetField" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(226, 584)
cards_offset = Vector2(95, 0)

[node name="Abyss" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(42, 439)
cards_offset = Vector2(0.5, 0)

[node name="PowerCharger" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(108, 585)
cards_offset = Vector2(-10, 0)

[node name="DeckZone" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(534, 579)
cards_offset = Vector2(0.5, 0.5)

[node name="EnchantZone" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(171, 434)
cards_offset = Vector2(20, 0)

[node name="Hand" parent="." instance=ExtResource("6_flpfl")]
position = Vector2(708, 585)

[node name="HpBar" type="Path2D" parent="."]
position = Vector2(619, 331)
curve = SubResource("Curve2D_0n4v4")
script = ExtResource("6_lx0n0")

[node name="HpPathFollow" type="PathFollow2D" parent="HpBar"]
rotation = 1.5708
progress = 295.0
rotates = false
loop = false

[node name="DamageLabel" type="Label" parent="HpBar/HpPathFollow"]
z_index = 100
offset_left = -15.0001
offset_top = -32.9999
offset_right = 24.9499
offset_bottom = -9.9999
rotation = -1.5708
scale = Vector2(1.24, 1.24)
text = "-50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpIndicator" type="Node2D" parent="HpBar/HpPathFollow"]

[node name="HpIndicatorSpriteL" type="Sprite2D" parent="HpBar/HpPathFollow/HpIndicator"]
position = Vector2(0, 22)
scale = Vector2(0.03, 0.03)
texture = ExtResource("6_2fb2j")

[node name="HpIndicatorSpriteR" type="Sprite2D" parent="HpBar/HpPathFollow/HpIndicator"]
position = Vector2(0, -24)
rotation = -3.14159
scale = Vector2(0.03, 0.03)
texture = ExtResource("6_2fb2j")

[node name="ReadyButton" type="Button" parent="."]
offset_left = 723.0
offset_top = 420.0
offset_right = 819.0
offset_bottom = 461.0
text = "BATTLE"

[node name="SelectionZone" type="Node2D" parent="."]
position = Vector2(119, 365)
script = ExtResource("6_bi0n1")

[node name="CardShadow" type="Sprite2D" parent="SelectionZone"]
modulate = Color(1, 1, 1, 0.419608)
z_index = 49
position = Vector2(207.5, -33.5)
rotation = 1.5708
scale = Vector2(1.04, 1.25286)
texture = ExtResource("7_p4beu")

[node name="SelectionField" parent="SelectionZone" instance=ExtResource("6_flpfl")]
position = Vector2(0, -35)
cards_offset = Vector2(100, 0)
fly_ease_out = false
base_z_index = 50

[node name="SelectionDoneButton" type="Button" parent="SelectionZone"]
offset_left = 159.0
offset_top = 103.0
offset_right = 238.0
offset_bottom = 138.0
text = "DONE"

[node name="HpLabel" type="Label" parent="."]
visible = false
offset_left = 800.0
offset_top = 463.0
offset_right = 858.0
offset_bottom = 486.0
text = "HP: 100"

[node name="CardInfoContainer" parent="." instance=ExtResource("7_mfhxv")]

[node name="AttackPoints" type="Node2D" parent="."]
script = ExtResource("7_ksjyq")

[node name="AttackPoint1" parent="AttackPoints" instance=ExtResource("6_flpfl")]
position = Vector2(317, 486)
base_z_index = 99

[node name="AttackPoint2" parent="AttackPoints" instance=ExtResource("6_flpfl")]
position = Vector2(317, 2)
fly_ease_out = false
base_z_index = 99

[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="SelectionZone/SelectionDoneButton" to="." method="_on_selection_done_button_pressed"]
[connection signal="attack_end" from="AttackPoints" to="." method="_on_attack_end"]
[connection signal="child_entered_tree" from="AttackPoints" to="AttackPoints" method="_on_child_entered_tree"]
